<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".images.presentation.screen.ImagePostDetailFragment">

    <data>
        <variable
            name="imagePost"
            type="com.app.general.pixage.images.domain.entity.ImagePost" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="0dp"
                app:title="@string/post"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                android:elevation="4dp"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivImage"
                imageUrl="@{imagePost.largeImageUrl}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="300dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@id/toolBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_baseline_thumb_up_24"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                app:layout_constraintStart_toStartOf="@id/tvLikes"
                app:layout_constraintEnd_toEndOf="@id/tvLikes"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLikes"
                style="@style/post_detail_icon_text_style"
                android:text="@{imagePost.likes.toString()}"
                app:layout_constraintTop_toBottomOf="@id/ivLikes"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="1234"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_baseline_comment_24"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                app:layout_constraintStart_toStartOf="@id/tvComments"
                app:layout_constraintEnd_toEndOf="@id/tvComments"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvComments"
                style="@style/post_detail_icon_text_style"
                android:text="@{imagePost.comments.toString()}"
                app:layout_constraintTop_toBottomOf="@id/ivComments"
                app:layout_constraintStart_toEndOf="@id/tvLikes"
                tools:text="1234"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_baseline_download_24"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                app:layout_constraintStart_toStartOf="@id/tvDownloads"
                app:layout_constraintEnd_toEndOf="@id/tvDownloads"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDownloads"
                style="@style/post_detail_icon_text_style"
                android:text="@{imagePost.downloads.toString()}"
                app:layout_constraintTop_toBottomOf="@id/ivDownloads"
                app:layout_constraintStart_toEndOf="@id/tvComments"
                tools:text="1234"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPostedBy"
                style="@style/post_name_text_style"
                android:text="@string/posted_by"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvLikes"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUserName"
                style="@style/post_name_text_style"
                android:text="@{imagePost.user}"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="@+id/tvPostedBy"
                app:layout_constraintStart_toEndOf="@+id/tvPostedBy"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Vincent Van Ghogh"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@id/tvPostedBy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTagList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{imagePost.tags.toString()}"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvTags"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTags"
                app:layout_constraintHorizontal_bias="0"
                tools:text="Art, Creativity, culture"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>