<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_menu_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionLayout="@layout/search_view"
        app:showAsAction="always|collapseActionView" />
</menu>